update ini files

--- a/default.ini
+++ b/default.ini
@@ -19,7 +19,10 @@ LightsOffOnError = true
 ; Hue bridge feature to smooth transitions; units of deciseconds (0.1s)
 ; Values between 0-300 should work (0-30 seconds), 0 will be choppy
 ; recommended values are 1-5
-TransitionTime = 1
+TransitionTime = 2
+; target frames per second; keep TransitionTime in mind
+; recommended value: under 8
+Fps = 4
 
 [mapping]
 ; mapping of hue lamp to lights
@@ -27,7 +30,3 @@ TransitionTime = 1
 ; e.g.,
 ;   Hue Play 1 = Ceiling Right Avg,Wing Right Up
 ;   Hue Play 2 = Wing Left Up
-
-[misc]
-; sleep time between updates, in milliseconds
-SleepDuration = 20
